Bug 1762521 - Add further locking to JumpListBuilder. r=mhowell,jesup

This fixes two cases where thread safety analysis complains about us not holding
the monitor.

Differential Revision: https://phabricator.services.mozilla.com/D142775